// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`joinOptions should match snapshots 1`] = `
Array [
  "Neptunium",
  ", ",
  "Plutonium",
  ", ",
  "Americium",
  ", ",
  "Curium",
]
`;

exports[`joinOptions should match snapshots 2`] = `
Array [
  <b>
    Neptunium
  </b>,
  ", ",
  <b>
    Plutonium
  </b>,
  ", ",
  <b>
    Americium
  </b>,
  ", ",
  <b>
    Curium
  </b>,
]
`;

exports[`joinOptions should match snapshots 3`] = `
Array [
  "Neptunium",
]
`;

exports[`joinOptions should match snapshots 4`] = `
Array [
  <b>
    Neptunium
  </b>,
]
`;
